# house.dev

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
docs/ux/: README.md  personas.md
docs/ux/proposals/: consolidated-path-bar-proposal.md
docs/ux/user-stories/: mvp-stories.md
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
